--- a/style.css
+++ b/style.css
@@ -127,8 +127,8 @@ body{
     height: 85px;
     display: flex;
     align-items: center;
-    border-bottom-left-radius: 10px;
-    border-bottom-right-radius: 10px;
+    border-top-left-radius: 0;
+    border-top-right-radius: 0;
 visibility: visible;
 }
 .share-text{
